changes to new branch

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>git branches </title>
 </head>
 <body>
-<header></header>
+<header>This is a change in the branch</header>
 </body>
 </html>
