changes made to title

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>git branches </title>
+    <title>Branch for changes</title>
 </head>
 <body>
 <header>This is a change in the branch</header>
