--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css" />
     <title>Branch for changes</title>
 </head>
 <body>
 <header>This is a change in the branch</header>
+<form action="#" class="form">form</form>
 </body>
 </html>
